fix gallery spacing

--- a/src/modules/GalleryBlock.scss
+++ b/src/modules/GalleryBlock.scss
@@ -1,5 +1,6 @@
 .gallery__block {
   overflow: hidden;
+  margin-bottom: 15px;
   .slick-list {
     margin: 0 -15px;
   }
